[gd_scene load_steps=55 format=2]

[ext_resource path="res://Art/Building/sticker/star_2.png" type="Texture" id=1]
[ext_resource path="res://Art/Building/sticker/arrow_1.png" type="Texture" id=2]
[ext_resource path="res://Art/Building/sticker/arrow_2.png" type="Texture" id=3]
[ext_resource path="res://Art/Building/sticker/star_1.png" type="Texture" id=4]
[ext_resource path="res://Art/Building/sticker/drop_3.png" type="Texture" id=5]
[ext_resource path="res://Art/Building/sticker/arrow_5.png" type="Texture" id=6]
[ext_resource path="res://Art/Building/progress bar/progress_bar_outline.png" type="Texture" id=7]
[ext_resource path="res://Art/Building/sticker/drop_1.png" type="Texture" id=8]
[ext_resource path="res://Art/Building/sticker/arrow_6.png" type="Texture" id=9]
[ext_resource path="res://Art/Building/progress bar/progress_bar_blue.png" type="Texture" id=10]
[ext_resource path="res://Art/Building/progress bar/progress_bar_red.png" type="Texture" id=11]
[ext_resource path="res://Art/Building/sticker/arrow_3.png" type="Texture" id=12]
[ext_resource path="res://Art/Building/PAGE/build_pieces_base_2.png" type="Texture" id=13]
[ext_resource path="res://Art/Building/sticker/star_3.png" type="Texture" id=14]
[ext_resource path="res://Art/Building/sticker/drop_2.png" type="Texture" id=15]
[ext_resource path="res://Art/Building/sticker/arrow_4.png" type="Texture" id=16]
[ext_resource path="res://Art/Building/sticker/tappo_1.png" type="Texture" id=17]
[ext_resource path="res://Art/Building/PAGE/build_pieces_base_3.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Artistic/text_note.tres" type="DynamicFont" id=19]
[ext_resource path="res://Art/Building/PAGE/build_pieces_base_1.png" type="Texture" id=20]
[ext_resource path="res://Art/Building/PAGE/paper_yellow_1.png" type="Texture" id=21]
[ext_resource path="res://Scenes/Artistic/text_standard.tres" type="DynamicFont" id=22]
[ext_resource path="res://Art/Fonts/TAPELOOP.TTF" type="DynamicFontData" id=23]
[ext_resource path="res://Scenes/Artistic/text_title_2.tres" type="DynamicFont" id=24]
[ext_resource path="res://Art/Building/PAGE/build_pieces_base_base.png" type="Texture" id=25]
[ext_resource path="res://Art/Building/pieces/fuel_0a.png" type="Texture" id=26]
[ext_resource path="res://Art/Building/pieces/fuel_2b.png" type="Texture" id=27]
[ext_resource path="res://Art/Building/pieces/fuel_0b.png" type="Texture" id=28]
[ext_resource path="res://Art/Building/pieces/plate_2a.png" type="Texture" id=29]
[ext_resource path="res://Art/Building/pieces/plate_2b.png" type="Texture" id=30]
[ext_resource path="res://Art/Building/pieces/plate_3b.png" type="Texture" id=31]
[ext_resource path="res://Art/Building/pieces/fuel_2a.png" type="Texture" id=32]
[ext_resource path="res://Art/Building/pieces/fuel_3b.png" type="Texture" id=33]
[ext_resource path="res://Art/Building/pieces/plate_3a.png" type="Texture" id=34]
[ext_resource path="res://Art/Building/pieces/fuel_1a.png" type="Texture" id=35]
[ext_resource path="res://Art/Building/pieces/prop_3a.png" type="Texture" id=36]
[ext_resource path="res://Art/Building/pieces/plate_1a.png" type="Texture" id=37]
[ext_resource path="res://Art/Building/pieces/plate_1b.png" type="Texture" id=38]
[ext_resource path="res://Art/Building/pieces/fuel_1b.png" type="Texture" id=39]
[ext_resource path="res://Art/Building/pieces/fuel_3a.png" type="Texture" id=40]
[ext_resource path="res://Art/Building/pieces/prop_3b.png" type="Texture" id=41]
[ext_resource path="res://Art/Building/pieces/prop_1b.png" type="Texture" id=42]
[ext_resource path="res://Art/Building/pieces/prop_2a.png" type="Texture" id=43]
[ext_resource path="res://Art/Building/pieces/prop_2b.png" type="Texture" id=44]
[ext_resource path="res://Art/Building/pieces/prop_1a.png" type="Texture" id=45]
[ext_resource path="res://Art/Building/pieces/wing_2a.png" type="Texture" id=46]
[ext_resource path="res://Art/Building/pieces/wing_2b.png" type="Texture" id=47]
[ext_resource path="res://Art/Building/pieces/wing_3b.png" type="Texture" id=48]
[ext_resource path="res://Art/Building/pieces/wing_1a.png" type="Texture" id=49]
[ext_resource path="res://Art/Building/pieces/wing_3a.png" type="Texture" id=50]
[ext_resource path="res://Art/Building/pieces/wing_1b.png" type="Texture" id=51]
[ext_resource path="res://Script/Building/s_building_interface.gd" type="Script" id=52]
[ext_resource path="res://Art/Building/Scarabocchi/scara_bar.png" type="Texture" id=53]

[sub_resource type="DynamicFont" id=1]
size = 19
outline_size = 1
outline_color = Color( 0.705882, 0.666667, 0.607843, 1 )
font_data = ExtResource( 23 )

[node name="BuildInterface" type="Node2D"]
script = ExtResource( 52 )

[node name="paper_yellow_1" type="Sprite" parent="."]
position = Vector2( 10.4813, -329.558 )
texture = ExtResource( 21 )

[node name="Base0" type="Sprite" parent="."]
texture = ExtResource( 25 )

[node name="Base1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 20 )

[node name="Base2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 13 )

[node name="Base3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 18 )

[node name="FuelLabel" type="Label" parent="."]
margin_left = -98.3363
margin_top = -370.673
margin_right = 116.664
margin_bottom = -342.673
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "Fuel"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fuel" type="TextureProgress" parent="."]
margin_left = -99.6471
margin_top = -343.333
margin_right = 119.353
margin_bottom = -325.333
max_value = 10.0
value = 1.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxFuel" type="TextureProgress" parent="."]
margin_left = -106.127
margin_top = -352.436
margin_right = 123.873
margin_bottom = -316.436
rect_scale = Vector2( 1, 0.9 )
max_value = 10.0
value = 10.0
texture_progress = ExtResource( 53 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldLabel" type="Label" parent="."]
margin_left = -98.3363
margin_top = -297.174
margin_right = 116.664
margin_bottom = -269.174
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "Shield"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield" type="TextureProgress" parent="."]
margin_left = -99.6471
margin_top = -319.833
margin_right = 119.353
margin_bottom = -301.833
max_value = 10.0
step = 0.1
value = 10.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 11 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons_3" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fuel_3" type="TextureButton" parent="Buttons_3"]
margin_left = 94.9897
margin_top = -143.042
margin_right = 148.99
margin_bottom = -34.042
texture_normal = ExtResource( 40 )
texture_hover = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plate_3" type="TextureButton" parent="Buttons_3"]
margin_left = 61.6187
margin_top = -13.5625
margin_right = 159.619
margin_bottom = 72.4375
texture_normal = ExtResource( 34 )
texture_hover = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prop_3" type="TextureButton" parent="Buttons_3"]
margin_left = 74.2997
margin_top = -206.447
margin_right = 144.3
margin_bottom = -145.447
texture_normal = ExtResource( 36 )
texture_hover = ExtResource( 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wing_3" type="TextureButton" parent="Buttons_3"]
margin_left = 8.89256
margin_top = 123.259
margin_right = 142.893
margin_bottom = 247.259
rect_rotation = -15.5
texture_normal = ExtResource( 50 )
texture_hover = ExtResource( 48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons_2" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fuel_2" type="TextureButton" parent="Buttons_2"]
margin_left = 21.5735
margin_top = -136.368
margin_right = 61.5735
margin_bottom = -39.3678
texture_normal = ExtResource( 32 )
texture_hover = ExtResource( 27 )

[node name="Plate_2" type="TextureButton" parent="Buttons_2"]
margin_left = -45.1685
margin_top = 2.45554
margin_right = 43.8315
margin_bottom = 63.4555
texture_normal = ExtResource( 29 )
texture_hover = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prop_2" type="TextureButton" parent="Buttons_2"]
margin_left = -19.1391
margin_top = -213.121
margin_right = 26.8609
margin_bottom = -152.121
texture_normal = ExtResource( 43 )
texture_hover = ExtResource( 44 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wing_2" type="TextureButton" parent="Buttons_2"]
margin_left = -57.182
margin_top = 127.263
margin_right = 23.818
margin_bottom = 227.263
texture_normal = ExtResource( 46 )
texture_hover = ExtResource( 47 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons_1" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fuel_0" type="TextureButton" parent="Buttons_1"]
margin_left = -125.926
margin_top = -98.3249
margin_right = -85.9263
margin_bottom = -58.3249
texture_normal = ExtResource( 26 )
texture_hover = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fuel_1" type="TextureButton" parent="Buttons_1"]
margin_left = -58.5168
margin_top = -119.015
margin_right = -18.5168
margin_bottom = -55.0149
texture_normal = ExtResource( 35 )
texture_hover = ExtResource( 39 )

[node name="Plate_1" type="TextureButton" parent="Buttons_1"]
margin_left = -104.569
margin_top = 1.1207
margin_right = -64.5688
margin_bottom = 62.1207
texture_normal = ExtResource( 37 )
texture_hover = ExtResource( 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prop_1" type="TextureButton" parent="Buttons_1"]
margin_left = -107.0
margin_top = -205.0
margin_right = -66.0
margin_bottom = -162.0
texture_normal = ExtResource( 45 )
texture_hover = ExtResource( 42 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wing_1" type="TextureButton" parent="Buttons_1"]
margin_left = -132.6
margin_top = 147.286
margin_right = -83.6005
margin_bottom = 224.286
texture_normal = ExtResource( 49 )
texture_hover = ExtResource( 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sticker_1" type="Node2D" parent="."]

[node name="star_1" type="Sprite" parent="Sticker_1"]
position = Vector2( -116.269, -186.297 )
texture = ExtResource( 4 )

[node name="tappo_1" type="Sprite" parent="Sticker_1"]
position = Vector2( -123.894, 15.2782 )
texture = ExtResource( 17 )

[node name="drop_1" type="Sprite" parent="Sticker_1"]
position = Vector2( -73.0391, -120.17 )
texture = ExtResource( 8 )

[node name="Sticker_2" type="Node2D" parent="."]

[node name="drop_3" type="Sprite" parent="Sticker_2"]
position = Vector2( 12.5838, -123.143 )
texture = ExtResource( 5 )

[node name="drop_2" type="Sprite" parent="Sticker_2"]
position = Vector2( -1.68672, -123.143 )
texture = ExtResource( 15 )

[node name="tappo_2" type="Sprite" parent="Sticker_2"]
position = Vector2( -123.542, 31.3089 )
texture = ExtResource( 17 )

[node name="star_2" type="Sprite" parent="Sticker_2"]
position = Vector2( -21.1492, -197.65 )
texture = ExtResource( 1 )

[node name="star_1" type="Sprite" parent="Sticker_2"]
position = Vector2( -28.8369, -184.295 )
texture = ExtResource( 4 )

[node name="Sticker_3" type="Node2D" parent="."]

[node name="drop_6" type="Sprite" parent="Sticker_3"]
position = Vector2( 157.667, -104.116 )
texture = ExtResource( 5 )

[node name="drop_5" type="Sprite" parent="Sticker_3"]
position = Vector2( 167.775, -118.386 )
texture = ExtResource( 15 )

[node name="drop_4" type="Sprite" parent="Sticker_3"]
position = Vector2( 150.532, -125.521 )
texture = ExtResource( 8 )

[node name="tappo_3" type="Sprite" parent="Sticker_3"]
position = Vector2( -123.673, 48.026 )
texture = ExtResource( 17 )

[node name="star_3" type="Sprite" parent="Sticker_3"]
position = Vector2( 61.4352, -178.295 )
texture = ExtResource( 14 )

[node name="star_4" type="Sprite" parent="Sticker_3"]
position = Vector2( 70.9548, -189.641 )
texture = ExtResource( 1 )

[node name="star_5" type="Sprite" parent="Sticker_3"]
position = Vector2( 57.2603, -199.646 )
texture = ExtResource( 4 )

[node name="Notes" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Propulsion" type="Label" parent="Notes"]
margin_left = -135.028
margin_top = -247.783
margin_right = -53.0284
margin_bottom = -220.783
custom_fonts/font = ExtResource( 22 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "Propulsion"

[node name="Propulsion2" type="Label" parent="Notes"]
margin_left = -180.804
margin_top = -145.512
margin_right = -101.804
margin_bottom = -118.512
rect_rotation = -97.0
custom_fonts/font = ExtResource( 22 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "must have"

[node name="Fuel" type="Label" parent="Notes"]
margin_left = -147.405
margin_top = -144.475
margin_right = -79.405
margin_bottom = -87.4746
rect_rotation = -7.7
custom_fonts/font = ExtResource( 22 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "Fuel
  tanks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fuel2" type="Label" parent="Notes"]
margin_left = 225.868
margin_top = -147.889
margin_right = 336.868
margin_bottom = -94.8889
rect_rotation = 92.0
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "I have to put
it somewhere"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plate" type="Label" parent="Notes"]
margin_left = -131.006
margin_top = -36.454
margin_right = -62.006
margin_bottom = -9.45399
custom_fonts/font = ExtResource( 22 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "Plates"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plate2" type="Label" parent="Notes"]
margin_left = -166.498
margin_top = 43.2576
margin_right = -97.498
margin_bottom = 68.2576
rect_rotation = 42.0
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "shield++"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wings" type="Label" parent="Notes"]
margin_left = -137.606
margin_top = 111.951
margin_right = -9.60641
margin_bottom = 164.951
rect_rotation = -15.5
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "Do I really need
             in space?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wings2" type="Label" parent="Notes"]
margin_left = -140.97
margin_top = 110.269
margin_right = -31.97
margin_bottom = 163.269
rect_rotation = -15.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "
wings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrows" type="Node2D" parent="."]

[node name="arrow_1" type="Sprite" parent="Arrows"]
position = Vector2( -153.322, -185.974 )
texture = ExtResource( 2 )

[node name="arrow_2" type="Sprite" parent="Arrows"]
position = Vector2( -147.653, -96.5197 )
texture = ExtResource( 3 )

[node name="arrow_3" type="Sprite" parent="Arrows"]
position = Vector2( -81.5069, -85.1804 )
texture = ExtResource( 12 )

[node name="arrow_4" type="Sprite" parent="Arrows"]
position = Vector2( -3.39182, -86.4403 )
texture = ExtResource( 16 )

[node name="arrow_5" type="Sprite" parent="Arrows"]
position = Vector2( 76.6132, -85.1804 )
texture = ExtResource( 6 )

[node name="arrow_6" type="Sprite" parent="Arrows"]
position = Vector2( -136.944, 162.394 )
texture = ExtResource( 9 )
[connection signal="pressed" from="Buttons_3/Fuel_3" to="." method="_on_Fuel_3_pressed"]
[connection signal="pressed" from="Buttons_3/Plate_3" to="." method="_on_Plate_3_pressed"]
[connection signal="pressed" from="Buttons_3/Prop_3" to="." method="_on_Prop_3_pressed"]
[connection signal="pressed" from="Buttons_3/Wing_3" to="." method="_on_Wing_3_pressed"]
[connection signal="pressed" from="Buttons_2/Fuel_2" to="." method="_on_Fuel_2_pressed"]
[connection signal="pressed" from="Buttons_2/Plate_2" to="." method="_on_Plate_2_pressed"]
[connection signal="pressed" from="Buttons_2/Prop_2" to="." method="_on_Prop_2_pressed"]
[connection signal="pressed" from="Buttons_2/Wing_2" to="." method="_on_Wing_2_pressed"]
[connection signal="pressed" from="Buttons_1/Fuel_0" to="." method="_on_Fuel_0_pressed"]
[connection signal="pressed" from="Buttons_1/Fuel_1" to="." method="_on_Fuel_1_pressed"]
[connection signal="pressed" from="Buttons_1/Plate_1" to="." method="_on_Plate_1_pressed"]
[connection signal="pressed" from="Buttons_1/Prop_1" to="." method="_on_Prop_1_pressed"]
[connection signal="pressed" from="Buttons_1/Wing_1" to="." method="_on_Wing_1_pressed"]
